--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -24,7 +24,7 @@
               <h1>
                 I am a <span class="txt_clr"> Mern Stack Developer, </span> Designer and programmer.
               </h1>
-              <a href="https://www.linkedin.com/in/suraj-kumar-07/" target="_blank"><button>check now</button></a>
+              <a href="https://www.linkedin.com/in/suraj-kumar-07/" target="_blank"><button>Go to linkedin profile</button></a>
             </div>
             <!-- right side div -->
             
