--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -61,6 +61,7 @@
 
         day.innerText = days;
       };
+      getCurrentDay();
 
       const getCurrentTime = () => {
         var months = ["Jan", "Feb", "Mar", "Apr", "May", "June","July", "August", "September", "October", "November", "December"];
